# a2a-inspector

./: .dockerignore  .gitignore  .jscpd.json  .mypy.ini  .ruff.toml  Dockerfile  README.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: linter.yaml
backend/: app.py  pyproject.toml  validators.py
frontend/: package.json
frontend/public/: index.html  styles.css
frontend/src/: script.ts
tools/: pyproject.toml
tools/inspector/: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
tools/inspector/webclient/: index.html
